Fixes the break in the How To Panel for Animated Icons

--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -3,6 +3,7 @@
   bottom: 0;
   padding-bottom: $m;
   position: fixed;
+  left: 0;
   width: 100%;
   z-index: $z-index-10;
 
